--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 				</section>
 				<section>
 					<section>
-						<h2>About Me</h2>
+						<h2>About us</h2>
 					</section>
 					<section>
-						<h4 class="blue">I am Nicolás</h4>
+						<h4 class="blue">We are Fiqus</h4>
 						<ul>
 							<li>
-								<p>I'm a founding member of Fiqus, a software development cooperative in Argentina</p>
+								<p>A software development cooperative located in Argentina</p>
 							</li>
 							<li class="fragment fade-in">
-								<p>I'm a developer, but currently I'm coordinating projects and attending commercial opportunities</p>
+								<p>We specialize in the development of Web and Mobile applications</p>
 							</li>
 							<li class="fragment fade-in">
-								<p>I participate as one of the FIT coordinators and I am part of the FACTTIC board</p>
+								<p>We are founding members of FACTTIC, the Argentinean Federation of Technology Cooperatives</p>
 							</li>
 						</ul>
 					</section>
